--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+Babel==2.5.1
 click==6.7
 Flask==0.12.2
 Flask-Admin==1.5.0
+Flask-Babel==0.11.2
+Flask-BabelEx==0.9.3
+Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+pytz==2017.3
+speaklater==1.3
+SQLAlchemy==1.1.15
 Werkzeug==0.12.2
 WTForms==2.1
